--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: "Decaf Dog"
+title: "Decaf Doug"
 author: "Blog Author"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
