--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: "Decaf Doug"
-author: "Blog Author"
+author: "Douglas Lehnen"
 description: "Made with <b style=\"color: #f45;\">&lt;3</b>"
 permalink: /:title/
 lang: "en"
